# download-from-stupid-emby

./: README.md  pyproject.toml
.github/workflows/: auto_test.yml  pypi_publish.yml
src/: config.py  downloader.py  errors.py  main.py  models.py  pyproject.toml  spider.py  utils.py
tests/: test_download.py
